# mesa

./: configure.ac  meson.build  meson_options.txt  outputs_and_frag_register_alloc.patch
include/GL/internal/: dri_interface.h
src/: Makefile.am  meson.build
src/compiler/nir/: nir.h  nir_opt_algebraic.py
src/etnaviv/: meson.build
src/etnaviv/compiler/: eir.c  eir.h  eir_compiler_nir.c  eir_legalize.c  eir_nir.c  eir_nir.h  eir_nir_lower_alu_to_scalar.c  eir_opt_peephole.c  eir_optimize.c  eir_optimize.h  eir_print.c  eir_register_allocate.c  eir_shader.c  eir_shader.h  eir_uniform.c  meson.build
src/etnaviv/compiler/tests/: eir_assemble.cpp  eir_legalize.cpp  eir_live_variables.cpp  eir_uniform.cpp  meson.build
src/etnaviv/gc/: gc_disasm.c  gc_disasm.h  gc_instr.c  gc_instr.h  gc_pack.c  gc_string.h  meson.build
src/etnaviv/gc/tests/: gc_disasm.cpp  gc_instr.cpp  gc_pack.cpp  meson.build
src/gallium/: Makefile.am
src/gallium/auxiliary/: Makefile.sources
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/renderonly/: renderonly.c  renderonly.h
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h  inline_drm_helper.h
src/gallium/drivers/etnaviv/: Makefile.am  Makefile.sources  bmp.c  bmp.h  eir_cmdline.c  etnaviv_blt.c  etnaviv_clear_blit.c  etnaviv_clear_blit.h  etnaviv_compiler.c  etnaviv_compiler.h  etnaviv_context.c  etnaviv_context.h  etnaviv_debug.h  etnaviv_disasm.c  etnaviv_eir.c  etnaviv_eir.h  etnaviv_emit.c  etnaviv_etc2.c  etnaviv_etc2.h  etnaviv_format.c  etnaviv_format.h  etnaviv_query.c  etnaviv_query_hw.c  etnaviv_query_hw.h  etnaviv_query_pm.c  etnaviv_query_pm.h  etnaviv_resource.c  etnaviv_resource.h  etnaviv_rs.c  etnaviv_screen.c  etnaviv_screen.h  etnaviv_shader.c  etnaviv_shader.h  etnaviv_state.c  etnaviv_texture.c  etnaviv_texture.h  etnaviv_texture_state.c  etnaviv_texture_state.h  etnaviv_transfer.c  etnaviv_translate.h  (+6 more)
src/gallium/drivers/etnaviv/eir/: eir.c  eir.h
src/gallium/drivers/etnaviv/hw/: cmdstream.xml.h  common.xml.h  common_3d.xml.h  isa.xml.h  state.xml.h  state_3d.xml.h  state_blt.xml.h  texdesc_3d.xml.h
src/gallium/drivers/nouveau/: nouveau_buffer.c  nouveau_buffer.h  nouveau_screen.h
src/gallium/drivers/nouveau/nv50/: nv50_miptree.c
src/gallium/drivers/nouveau/nvc0/: nvc0_resource.c
src/gallium/drivers/renderonly/: renderonly_context.c  renderonly_resource.c  renderonly_resource.h  renderonly_screen.c
src/gallium/drivers/tegra/: Automake.inc  Makefile.am
src/gallium/state_trackers/dri/: dri2.c
src/gallium/targets/dri/: Makefile.am  target.c
src/gallium/winsys/imx/drm/: imx_drm_winsys.c
src/gallium/winsys/nouveau/drm/: nouveau_drm_public.h  nouveau_drm_winsys.c
src/gallium/winsys/tegra/drm/: Android.mk  Makefile.am  tegra_drm_public.h  tegra_drm_winsys.c
src/loader/: loader.c  loader.h
src/mesa/main/: glformats.c
src/mesa/state_tracker/: st_atom_sampler.c  st_atom_texture.c  st_extensions.c  st_program.h  st_sampler_view.c
src/vivante/: Makefile.am  Makefile.compiler.am  Makefile.gc.am  Makefile.sources  meson.build
src/vivante/compiler/: eir.c  eir.h  eir_compiler.c  eir_compiler.h  eir_compiler_nir.c  eir_dump.c  eir_legalize.c  eir_live_variables.c  eir_nir.c  eir_nir.h  eir_nir_legalize_uniforms.c  eir_nir_lower_uniforms.c  eir_print.c  eir_register_allocate.c  eir_shader.c  eir_shader.h  meson.build  nir_fixup_register.c
src/vivante/compiler/tests/: eir_assemble.cpp  eir_instructions.cpp  eir_legalize.cpp  eir_live_variables.cpp  eir_uniform.cpp  eir_uniforms.cpp  meson.build
src/vivante/gc/: gc_disasm.c  gc_disasm.h  gc_instr.c  gc_instr.h  gc_pack.c  gc_string.h  meson.build
src/vivante/gc/tests/: gc_disasm.cpp  gc_instr.cpp  gc_pack.cpp  meson.build
